Add support for anthropic server
