# api/neurouter/v1/completion.pb.go
@@ -14,7 +14,7 @@
 
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.35.2
+// 	protoc-gen-go v1.36.8
 // 	protoc        v3.21.12
 // source: neurouter/v1/completion.proto
 
@@ -25,6 +25,7 @@ import (
 	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
 	reflect "reflect"
 	sync "sync"
+	unsafe "unsafe"
 )
 
 const (
@@ -35,14 +36,13 @@ const (
 )
 
 type CompletionReq struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            string                 `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Model         string                 `protobuf:"bytes,2,opt,name=model,proto3" json:"model,omitempty"`
+	Config        *GenerationConfig      `protobuf:"bytes,3,opt,name=config,proto3" json:"config,omitempty"`
+	Contents      []*Content             `protobuf:"bytes,4,rep,name=contents,proto3" json:"contents,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	Id       string            `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
-	Model    string            `protobuf:"bytes,2,opt,name=model,proto3" json:"model,omitempty"`
-	Config   *GenerationConfig `protobuf:"bytes,3,opt,name=config,proto3" json:"config,omitempty"`
-	Contents []*Content        `protobuf:"bytes,4,rep,name=contents,proto3" json:"contents,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *CompletionReq) Reset() {
@@ -104,13 +104,12 @@ func (x *CompletionReq) GetContents() []*Content {
 }
 
 type CompletionResp struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            string                 `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Contents      []*Content             `protobuf:"bytes,2,rep,name=contents,proto3" json:"contents,omitempty"`
+	Statistics    *Statistics            `protobuf:"bytes,3,opt,name=statistics,proto3" json:"statistics,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	Id         string      `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
-	Contents   []*Content  `protobuf:"bytes,2,rep,name=contents,proto3" json:"contents,omitempty"`
-	Statistics *Statistics `protobuf:"bytes,3,opt,name=statistics,proto3" json:"statistics,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *CompletionResp) Reset() {
@@ -166,56 +165,33 @@ func (x *CompletionResp) GetStatistics() *Statistics {
 
 var File_neurouter_v1_completion_proto protoreflect.FileDescriptor
 
-var file_neurouter_v1_completion_proto_rawDesc = []byte{
-	0x0a, 0x1d, 0x6e, 0x65, 0x75, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x2f, 0x63,
-	0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x74, 0x69, 0x6f, 0x6e, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12,
-	0x0c, 0x6e, 0x65, 0x75, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x1a, 0x19, 0x6e,
-	0x65, 0x75, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6f, 0x6d, 0x6d,
-	0x6f, 0x6e, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xa0, 0x01, 0x0a, 0x0d, 0x43, 0x6f, 0x6d,
-	0x70, 0x6c, 0x65, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x71, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64,
-	0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x12, 0x14, 0x0a, 0x05, 0x6d, 0x6f,
-	0x64, 0x65, 0x6c, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x6d, 0x6f, 0x64, 0x65, 0x6c,
-	0x12, 0x36, 0x0a, 0x06, 0x63, 0x6f, 0x6e, 0x66, 0x69, 0x67, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0b,
-	0x32, 0x1e, 0x2e, 0x6e, 0x65, 0x75, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e,
-	0x47, 0x65, 0x6e, 0x65, 0x72, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x43, 0x6f, 0x6e, 0x66, 0x69, 0x67,
-	0x52, 0x06, 0x63, 0x6f, 0x6e, 0x66, 0x69, 0x67, 0x12, 0x31, 0x0a, 0x08, 0x63, 0x6f, 0x6e, 0x74,
-	0x65, 0x6e, 0x74, 0x73, 0x18, 0x04, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x15, 0x2e, 0x6e, 0x65, 0x75,
-	0x72, 0x6f, 0x75, 0x74, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x6f, 0x6e, 0x74, 0x65, 0x6e,
-	0x74, 0x52, 0x08, 0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x73, 0x22, 0x8d, 0x01, 0x0a, 0x0e,
-	0x43, 0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x12, 0x0e,
-	0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x12, 0x31,
-	0x0a, 0x08, 0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x73, 0x18, 0x02, 0x20, 0x03, 0x28, 0x0b,
-	0x32, 0x15, 0x2e, 0x6e, 0x65, 0x75, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e,
-	0x43, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x52, 0x08, 0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74,
-	0x73, 0x12, 0x38, 0x0a, 0x0a, 0x73, 0x74, 0x61, 0x74, 0x69, 0x73, 0x74, 0x69, 0x63, 0x73, 0x18,
-	0x03, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x18, 0x2e, 0x6e, 0x65, 0x75, 0x72, 0x6f, 0x75, 0x74, 0x65,
-	0x72, 0x2e, 0x76, 0x31, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x69, 0x73, 0x74, 0x69, 0x63, 0x73, 0x52,
-	0x0a, 0x73, 0x74, 0x61, 0x74, 0x69, 0x73, 0x74, 0x69, 0x63, 0x73, 0x32, 0xa6, 0x01, 0x0a, 0x0a,
-	0x43, 0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x74, 0x69, 0x6f, 0x6e, 0x12, 0x47, 0x0a, 0x08, 0x43, 0x6f,
-	0x6d, 0x70, 0x6c, 0x65, 0x74, 0x65, 0x12, 0x1b, 0x2e, 0x6e, 0x65, 0x75, 0x72, 0x6f, 0x75, 0x74,
-	0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x74, 0x69, 0x6f, 0x6e,
-	0x52, 0x65, 0x71, 0x1a, 0x1c, 0x2e, 0x6e, 0x65, 0x75, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x72, 0x2e,
-	0x76, 0x31, 0x2e, 0x43, 0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x73,
-	0x70, 0x22, 0x00, 0x12, 0x4f, 0x0a, 0x0e, 0x43, 0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x74, 0x65, 0x53,
-	0x74, 0x72, 0x65, 0x61, 0x6d, 0x12, 0x1b, 0x2e, 0x6e, 0x65, 0x75, 0x72, 0x6f, 0x75, 0x74, 0x65,
-	0x72, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x74, 0x69, 0x6f, 0x6e, 0x52,
-	0x65, 0x71, 0x1a, 0x1c, 0x2e, 0x6e, 0x65, 0x75, 0x72, 0x6f, 0x75, 0x74, 0x65, 0x72, 0x2e, 0x76,
-	0x31, 0x2e, 0x43, 0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x73, 0x70,
-	0x22, 0x00, 0x30, 0x01, 0x42, 0x33, 0x5a, 0x31, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63,
-	0x6f, 0x6d, 0x2f, 0x6e, 0x65, 0x75, 0x72, 0x61, 0x78, 0x65, 0x73, 0x2f, 0x6e, 0x65, 0x75, 0x72,
-	0x6f, 0x75, 0x74, 0x65, 0x72, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x6e, 0x65, 0x75, 0x72, 0x6f, 0x75,
-	0x74, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x33,
-}
+const file_neurouter_v1_completion_proto_rawDesc = "" +
+	"\n" +
+	"\x1dneurouter/v1/completion.proto\x12\fneurouter.v1\x1a\x19neurouter/v1/common.proto\"\xa0\x01\n" +
+	"\rCompletionReq\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\tR\x02id\x12\x14\n" +
+	"\x05model\x18\x02 \x01(\tR\x05model\x126\n" +
+	"\x06config\x18\x03 \x01(\v2\x1e.neurouter.v1.GenerationConfigR\x06config\x121\n" +
+	"\bcontents\x18\x04 \x03(\v2\x15.neurouter.v1.ContentR\bcontents\"\x8d\x01\n" +
+	"\x0eCompletionResp\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\tR\x02id\x121\n" +
+	"\bcontents\x18\x02 \x03(\v2\x15.neurouter.v1.ContentR\bcontents\x128\n" +
+	"\n" +
+	"statistics\x18\x03 \x01(\v2\x18.neurouter.v1.StatisticsR\n" +
+	"statistics2\xa6\x01\n" +
+	"\n" +
+	"Completion\x12G\n" +
+	"\bComplete\x12\x1b.neurouter.v1.CompletionReq\x1a\x1c.neurouter.v1.CompletionResp\"\x00\x12O\n" +
+	"\x0eCompleteStream\x12\x1b.neurouter.v1.CompletionReq\x1a\x1c.neurouter.v1.CompletionResp\"\x000\x01B3Z1github.com/neuraxes/neurouter/api/neurouter/v1;v1b\x06proto3"
 
 var (
 	file_neurouter_v1_completion_proto_rawDescOnce sync.Once
-	file_neurouter_v1_completion_proto_rawDescData = file_neurouter_v1_completion_proto_rawDesc
+	file_neurouter_v1_completion_proto_rawDescData []byte
 )
 
 func file_neurouter_v1_completion_proto_rawDescGZIP() []byte {
 	file_neurouter_v1_completion_proto_rawDescOnce.Do(func() {
-		file_neurouter_v1_completion_proto_rawDescData = protoimpl.X.CompressGZIP(file_neurouter_v1_completion_proto_rawDescData)
+		file_neurouter_v1_completion_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_neurouter_v1_completion_proto_rawDesc), len(file_neurouter_v1_completion_proto_rawDesc)))
 	})
 	return file_neurouter_v1_completion_proto_rawDescData
 }
@@ -254,7 +230,7 @@ func file_neurouter_v1_completion_proto_init() {
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: file_neurouter_v1_completion_proto_rawDesc,
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_neurouter_v1_completion_proto_rawDesc), len(file_neurouter_v1_completion_proto_rawDesc)),
 			NumEnums:      0,
 			NumMessages:   2,
 			NumExtensions: 0,
@@ -265,7 +241,6 @@ func file_neurouter_v1_completion_proto_init() {
 		MessageInfos:      file_neurouter_v1_completion_proto_msgTypes,
 	}.Build()
 	File_neurouter_v1_completion_proto = out.File
-	file_neurouter_v1_completion_proto_rawDesc = nil
 	file_neurouter_v1_completion_proto_goTypes = nil
 	file_neurouter_v1_completion_proto_depIdxs = nil
 }
